fixed spacing issues with counter, labeled barcalc, and changed the seed file a bit

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -101,7 +101,7 @@ background-color: #495057;
 
 /* Inner number box of the counter */
 .number-input.number-input input[type=number] {
-max-width: 4rem;
+max-width: 3.25rem;
 padding: .5rem;
 border: 1px solid #ced4da;
 border-width: 0 1px;
